# oxygen-icon-theme

./: Makefile  README.md  oxygen-icon-theme.spec
src/: CMakeLists.txt  TODO-smallversions  icon-copy.sh  icon-move.sh  icon-private-copy.sh  icon-private-move.sh  icon-remove.sh  index.theme
src/scalable/: object-rotate.svgz
src/scalable/actions/: document-print-direct.svgz  document-print-preview.svgz  layer-visible-off.svgz  layer-visible-on.svgz  project-development-close-all.svgz  project-development-close.svgz  project-development-new-template.svgz  project-development.svgz  quickopen-file.svgz  quickopen.svgz  resource-group.svgz  roll.svgz  svn-commit.svgz  tools-media-optical-burn-image.svgz  tools-media-optical-burn.svgz  tools-media-optical-copy.svgz  tools-media-optical-erase.svgz  tools-media-optical-format.svgz  transform-crop.svgz  transform-rotate.svgz  view-calendar.svgz
src/scalable/apps/: accessories-calculator.svgz  charm.svgz  kde-windows.svgz  mameexecutor.svgz  preferences-desktop-display-color.svgz
src/scalable/categories/: applications-science.svgz  preferences-other.svgz
src/scalable/devices/: media-flash-sd-mmc.svgz  media-optical-dvd-video.svgz  network-wired.svgz  network-wireless-connected-00.svgz  network-wireless-connected-25.svgz  network-wireless-connected-50.svgz  network-wireless-connected-75.svgz  network-wireless-disconnected.svgz  network-wireless.svgz
src/scalable/mimetypes/: application-vnd.scribus.svgz  application-x-kplato.svgz  application-x-ruby.svgz
src/scalable/status/: weather-clear-night.svgz  weather-clear.svgz  (+6 more)
(+794 files in other folders)
